# nswarm

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
doc/: nswarm-host.conf
include/: CMakeLists.txt  async.hpp  auth.hpp  client.hpp  data.hpp  dispatcher.hpp  logging.hpp  protocol.hpp  server.hpp  task.hpp  types.hpp  util.hpp  variant.hpp
include/nswarm/: async.hpp  auth.hpp  client.hpp  data.hpp  dispatcher.hpp  heartbeat.hpp  implement.hpp  logging.hpp  protocol.hpp  response.hpp  sha.hpp  subscribe.hpp  task.hpp  util.hpp
scripts/: certmgr.sh  coverage.sh  runtest.sh
src/: CMakeLists.txt  config.hpp  event_manager.hpp  main.cpp  manager.hpp  memory.hpp  process.hpp  sensor.hpp  server.hpp  util.hpp
src/host/: api_server.hpp  daemon.hpp  main.cpp  node_server.hpp
src/node/: daemon.hpp  main.cpp  service.hpp  upstream.hpp
src/tests/: CMakeLists.txt  api_server_test.cpp  client_test.cpp  dispatcher_test.cpp  logging_test.cpp  message_test.cpp  node_server_test.cpp  node_upstream_test.cpp  program_options_test.cpp  sensor_test.cpp  server_test.cpp  service_server_test.cpp  variant_test.cpp
