
add_executable(logging_test logging_test.cpp)
target_link_libraries(logging_test gtest_main)

add_executable(sensor_test sensor_test.cpp)
target_link_libraries(sensor_test gtest_main)

add_executable(dispatcher_test dispatcher_test.cpp)
target_link_libraries(dispatcher_test gtest_main)

add_executable(program_options_test program_options_test.cpp)
target_link_libraries(program_options_test gtest_main)

add_executable(client_test client_test.cpp)
target_link_libraries(client_test gtest_main)

add_executable(server_test server_test.cpp)
target_link_libraries(server_test gtest_main)

add_executable(node_server_test node_server_test.cpp)
target_link_libraries(node_server_test gtest_main)

add_executable(node_upstream_test node_upstream_test.cpp)
target_link_libraries(node_upstream_test gtest_main)

add_executable(variant_test variant_test.cpp)
target_link_libraries(variant_test gtest_main)

add_executable(service_server_test service_server_test.cpp)
target_link_libraries(service_server_test gtest_main)

add_executable(message_test message_test.cpp)
target_link_libraries(message_test gtest_main)

